fix search icon in dark mode

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -26,6 +26,7 @@
 				position: absolute;
 				right: 4px;
 				top: 4px;
+				filter: var(--var-iframe-filter);
 			}
 		}
 	}
